# Minesweeper

./: CMakeLists.txt  README.md
src/console/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Minefield.cpp  Minefield.h  MinefieldGenerator.cpp  MinefieldGenerator.h  Minesweeper.cpp  Minesweeper.h
src/sfml/: CMakeLists.txt  SFMLMinefield.cpp  SFMLMinefield.h  main.cpp
